--- a/index.html
+++ b/index.html
@@ -69,9 +69,7 @@
           <div class="subheading mb-5">Tirunelveli
             <a href="mailto:ashleyjeyaseelan@gmail.com">ashleyjeyaseelan@gmail.com</a>
           </div>
-          <p class="mb-5">I am a fresher and an enthusiastic MERN stack developer who wants to work in the software environment to
-            explore my knowledge, contribute to innovative projects, and further enhance my skills in web development, with a
-            keen interest in building robust and user-friendly applications</p>
+          <p class="mb-5">I have completed a 3-month MERN stack course from Error Makes Clever and worked as a Technical Support Engineer for 10 months. During this time, I collaborated with designers, backend developers, and product managers to implement UI/UX designs. Additionally, I utilized Git/GitHub for version control, collaborative development, and code reviews.</p>
           <ul class="list-inline list-social-icons mb-0">
           
             <li class="list-inline-item">
@@ -100,6 +98,15 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
+              <h3 class="mb-0">Technical Support Engineer </h3>
+              <div class="subheading mb-3">HyperVerge Technologies</div>
+              <p>Provided B2B production support for KYC services, troubleshooting real-time technical issues while maintaining strict SLAs for seamless operations.
+</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">May 2024 - March 2025</span>
+            </div>
+ <div class="resume-content mr-auto">
               <h3 class="mb-0">Assistant Professor</h3>
               <div class="subheading mb-3">JJ College of Engineering and Technology</div>
               <p>Taken classes for final and pre-final year students and made them understand how the instrument and system works.</p>
