--- a/index.html
+++ b/index.html
@@ -103,15 +103,6 @@
           <h2 class="mb-5">Experience</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Technical Support Engineer </h3>
-              <div class="subheading mb-3">HyperVerge Technologies</div>
-              <p>Provided B2B production support for KYC services, troubleshooting real-time technical issues while maintaining strict SLAs for seamless operations.
-</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">May 2024 - March 2025</span>
-            </div>
  <div class="resume-content mr-auto">
               <h3 class="mb-0">Assistant Professor</h3>
               <div class="subheading mb-3">JJ College of Engineering and Technology</div>
@@ -119,6 +110,17 @@
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">August 2016 - October 2017</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Technical Support Engineer</h3>
+              <div class="subheading mb-3">HyperVerge Technologies</div>
+              <p>Provided B2B production support for clients utilizing KYC services, ensuring seamless operation and issue resolution. Analyzed and troubleshoot technical issues in real-time, maintaining strict SLAs to meet client expectations.</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">May 2024 - March 2025</span>
             </div>
           </div>
 
